[package]
name = "moonbeam-cli"
authors = { workspace = true }
edition = "2021"
version = "0.47.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-num = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
url = { workspace = true }

# Moonbeam
moonbeam-cli-opt = { workspace = true }
moonbeam-service = { workspace = true }

# Substrate
frame-benchmarking-cli = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }

# Cumulus / Nimbus
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true, features = ["std"] }
nimbus-primitives = { workspace = true, features = ["std"] }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-parachain = { workspace = true, features = ["std"] }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = [
    "moonbase-native",
    "moonbeam-native",
    "moonriver-native"
]

lazy-loading = ["sc-service/test-helpers", "moonbeam-service/lazy-loading"]

metadata-hash = ["moonbeam-service/metadata-hash"]

moonbase-native = ["moonbeam-service/moonbase-native"]
moonbeam-native = ["moonbeam-service/moonbeam-native"]
moonriver-native = ["moonbeam-service/moonriver-native"]

runtime-benchmarks = [
    "moonbeam-service/runtime-benchmarks",
    "polkadot-service/runtime-benchmarks",
]
