[package]
name = "perf-test"
authors = [ "PureStake" ]
description = "Moonbeam Performance Tests"
edition = "2021"
version = "0.1.0"

[dependencies]
async-io = "1.3"
clap = { version = "3.1", features = [ "derive" ] }
cli-table = "0.4"
futures = { version = "0.3.1", features = [ "compat" ] }
hex = "0.4.3"
libsecp256k1 = { version = "0.5" }
log = "0.4.8"
rlp = { version = "0.5" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha3 = { version = "0.8" }

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
# TODO: handle different runtime builds
moonbase-runtime = { path = "../../runtime/moonbase" }
service = { package = "moonbeam-service", path = "../service", default-features = false }
session-keys-primitives = { path = "../../primitives/session-keys" }

# Substrate
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

# Frontier
ethereum = { version = "0.12.0" }
fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }

# Cumulus / Nimbus
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.20" }
