[package]
name = "rpc-client"
version = "0.1.0"
authors = ["PureStake"]
edition = "2018"

[dependencies]
jsonrpsee-ws-client = { version = "0.3.0", default-features = false, features = [
    "tokio02",
] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parity-scale-codec = '2.0.0'

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
