[package]
name = 'moonbeam-rpc'
description = 'RPC extensions for the moonbeam standalone and parachain nodes'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
version = '0.1.0'
authors = ["PureStake"]
edition = '2018'

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
parity-scale-codec = '1.0.0'
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

moonbeam-runtime = { path = "../../runtime" }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate", branch = "master" }

fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "v0.5-hotfixes" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "v0.5-hotfixes" }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "v0.5-hotfixes" }

moonbeam-rpc-debug = { path = "../../client/rpc/debug" }
